packages/drolta/drolta-0.2.0-py3-none-any.whl/drolta/parsing/DroltaParser.py
# Generated from ./Drolta.g4 by ANTLR 4.13.2
# encoding: utf-8
import sys
from io import StringIO

from antlr4 import *

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class DroltaParser(Parser):

    grammarFileName = "Drolta.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'?'",
        "';'",
        "'.'",
        "'('",
        "')'",
        "'['",
        "']'",
        "'::'",
        "','",
        "'FIND'",
        "'WHERE'",
        "'OR'",
        "'AND'",
        "'NOT'",
        "'LIMIT'",
        "'BY'",
        "'IN'",
        "'ORDER'",
        "'GROUP'",
        "'USING'",
        "'DEFINE'",
        "'ALIAS'",
        "'AS'",
        "'='",
        "'!='",
        "'<='",
        "'<'",
        "'>='",
        "'>'",
        "'ASC'",
        "'DESC'",
        "'OFFSET'",
        "'FIRST'",
        "'LAST'",
        "'NULLS'",
        "'NULL'",
        "'TRUE'",
        "'FALSE'",
    ]

    symbolicNames = [
        "<INVALID>",
        "<INVALID>",
        "S_COL",
        "DOT",
        "OPEN_PAR",
        "CLOSE_PAR",
        "BRACKET_L",
        "BRACKET_R",
        "DBL_COL",
        "COMMA",
        "FIND",
        "WHERE",
        "OR",
        "AND",
        "NOT",
        "LIMIT",
        "BY",
        "IN",
        "ORDER",
        "GROUP",
        "USING",
        "DEFINE",
        "ALIAS",
        "AS",
        "EQ",
        "NEQ",
        "LTE",
        "LT",
        "GTE",
        "GT",
        "ASC",
        "DESC",
        "OFFSET",
        "FIRST",
        "LAST",
        "NULLS",
        "NULL",
        "TRUE",
        "FALSE",
        "IDENTIFIER",
        "INT_LITERAL",
        "FLOAT_LITERAL",
        "STRING_LITERAL",
        "SINGLE_LINE_COMMENT",
        "MULTILINE_COMMENT",
        "WHITESPACE",
    ]

    RULE_prog = 0
    RULE_prog_statement = 1
    RULE_alias_declaration = 2
    RULE_rule_declaration = 3
    RULE_define_clause = 4
    RULE_query = 5
    RULE_find_clause = 6
    RULE_result_var = 7
    RULE_where_clause = 8
    RULE_order_by_statement = 9
    RULE_ordering_term = 10
    RULE_group_by_statement = 11
    RULE_limit_statement = 12
    RULE_where_statement = 13
    RULE_filter_statement = 14
    RULE_atom_list = 15
    RULE_comparison_operator = 16
    RULE_predicate_statement = 17
    RULE_predicate_param = 18
    RULE_atom = 19
    RULE_variable = 20

    ruleNames = [
        "prog",
        "prog_statement",
        "alias_declaration",
        "rule_declaration",
        "define_clause",
        "query",
        "find_clause",
        "result_var",
        "where_clause",
        "order_by_statement",
        "ordering_term",
        "group_by_statement",
        "limit_statement",
        "where_statement",
        "filter_statement",
        "atom_list",
        "comparison_operator",
        "predicate_statement",
        "predicate_param",
        "atom",
        "variable",
    ]

    EOF = Token.EOF
    T__0 = 1
    S_COL = 2
    DOT = 3
    OPEN_PAR = 4
    CLOSE_PAR = 5
    BRACKET_L = 6
    BRACKET_R = 7
    DBL_COL = 8
    COMMA = 9
    FIND = 10
    WHERE = 11
    OR = 12
    AND = 13
    NOT = 14
    LIMIT = 15
    BY = 16
    IN = 17
    ORDER = 18
    GROUP = 19
    USING = 20
    DEFINE = 21
    ALIAS = 22
    AS = 23
    EQ = 24
    NEQ = 25
    LTE = 26
    LT = 27
    GTE = 28
    GT = 29
    ASC = 30
    DESC = 31
    OFFSET = 32
    FIRST = 33
    LAST = 34
    NULLS = 35
    NULL = 36
    TRUE = 37
    FALSE = 38
    IDENTIFIER = 39
    INT_LITERAL = 40
    FLOAT_LITERAL = 41
    STRING_LITERAL = 42
    SINGLE_LINE_COMMENT = 43
    MULTILINE_COMMENT = 44
    WHITESPACE = 45

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class ProgContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def prog_statement(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(DroltaParser.Prog_statementContext)
            else:
                return self.getTypedRuleContext(DroltaParser.Prog_statementContext, i)

        def EOF(self):
            return self.getToken(DroltaParser.EOF, 0)

        def S_COL(self, i: int = None):
            if i is None:
                return self.getTokens(DroltaParser.S_COL)
            else:
                return self.getToken(DroltaParser.S_COL, i)

        def getRuleIndex(self):
            return DroltaParser.RULE_prog

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterProg"):
                listener.enterProg(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitProg"):
                listener.exitProg(self)

    def prog(self):

        localctx = DroltaParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.prog_statement()
            self.state = 47
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 0, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 43
                    self.match(DroltaParser.S_COL)
                    self.state = 44
                    self.prog_statement()
                self.state = 49
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 0, self._ctx)

            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 2:
                self.state = 50
                self.match(DroltaParser.S_COL)

            self.state = 53
            self.match(DroltaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Prog_statementContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def alias_declaration(self):
            return self.getTypedRuleContext(DroltaParser.Alias_declarationContext, 0)

        def rule_declaration(self):
            return self.getTypedRuleContext(DroltaParser.Rule_declarationContext, 0)

        def query(self):
            return self.getTypedRuleContext(DroltaParser.QueryContext, 0)

        def getRuleIndex(self):
            return DroltaParser.RULE_prog_statement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterProg_statement"):
                listener.enterProg_statement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitProg_statement"):
                listener.exitProg_statement(self)

    def prog_statement(self):

        localctx = DroltaParser.Prog_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_prog_statement)
        try:
            self.state = 58
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [22]:
                self.enterOuterAlt(localctx, 1)
                self.state = 55
                self.alias_declaration()
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 2)
                self.state = 56
                self.rule_declaration()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 3)
                self.state = 57
                self.query()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Alias_declarationContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.original = None  # Token
            self.alias = None  # Token

        def ALIAS(self):
            return self.getToken(DroltaParser.ALIAS, 0)

        def AS(self):
            return self.getToken(DroltaParser.AS, 0)

        def IDENTIFIER(self, i: int = None):
            if i is None:
                return self.getTokens(DroltaParser.IDENTIFIER)
            else:
                return self.getToken(DroltaParser.IDENTIFIER, i)

        def getRuleIndex(self):
            return DroltaParser.RULE_alias_declaration

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAlias_declaration"):
                listener.enterAlias_declaration(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAlias_declaration"):
                listener.exitAlias_declaration(self)

    def alias_declaration(self):

        localctx = DroltaParser.Alias_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_alias_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(DroltaParser.ALIAS)
            self.state = 61
            localctx.original = self.match(DroltaParser.IDENTIFIER)
            self.state = 62
            self.match(DroltaParser.AS)
            self.state = 63
            localctx.alias = self.match(DroltaParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Rule_declarationContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def define_clause(self):
            return self.getTypedRuleContext(DroltaParser.Define_clauseContext, 0)

        def where_clause(self):
            return self.getTypedRuleContext(DroltaParser.Where_clauseContext, 0)

        def group_by_statement(self):
            return self.getTypedRuleContext(DroltaParser.Group_by_statementContext, 0)

        def order_by_statement(self):
            return self.getTypedRuleContext(DroltaParser.Order_by_statementContext, 0)

        def limit_statement(self):
            return self.getTypedRuleContext(DroltaParser.Limit_statementContext, 0)

        def getRuleIndex(self):
            return DroltaParser.RULE_rule_declaration

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterRule_declaration"):
                listener.enterRule_declaration(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitRule_declaration"):
                listener.exitRule_declaration(self)

    def rule_declaration(self):

        localctx = DroltaParser.Rule_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_rule_declaration)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.define_clause()
            self.state = 66
            self.where_clause()
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 19:
                self.state = 67
                self.group_by_statement()

            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 18:
                self.state = 70
                self.order_by_statement()

            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 15:
                self.state = 73
                self.limit_statement()

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Define_clauseContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.ruleName = None  # Token

        def DEFINE(self):
            return self.getToken(DroltaParser.DEFINE, 0)

        def OPEN_PAR(self):
            return self.getToken(DroltaParser.OPEN_PAR, 0)

        def CLOSE_PAR(self):
            return self.getToken(DroltaParser.CLOSE_PAR, 0)

        def IDENTIFIER(self):
            return self.getToken(DroltaParser.IDENTIFIER, 0)

        def result_var(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(DroltaParser.Result_varContext)
            else:
                return self.getTypedRuleContext(DroltaParser.Result_varContext, i)

        def COMMA(self, i: int = None):
            if i is None:
                return self.getTokens(DroltaParser.COMMA)
            else:
                return self.getToken(DroltaParser.COMMA, i)

        def getRuleIndex(self):
            return DroltaParser.RULE_define_clause

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterDefine_clause"):
                listener.enterDefine_clause(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitDefine_clause"):
                listener.exitDefine_clause(self)

    def define_clause(self):

        localctx = DroltaParser.Define_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_define_clause)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(DroltaParser.DEFINE)
            self.state = 77
            localctx.ruleName = self.match(DroltaParser.IDENTIFIER)
            self.state = 78
            self.match(DroltaParser.OPEN_PAR)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 1 or _la == 39:
                self.state = 79
                self.result_var()
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la == 9:
                    self.state = 80
                    self.match(DroltaParser.COMMA)
                    self.state = 81
                    self.result_var()
                    self.state = 86
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

            self.state = 89
            self.match(DroltaParser.CLOSE_PAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class QueryContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def find_clause(self):
            return self.getTypedRuleContext(DroltaParser.Find_clauseContext, 0)

        def where_clause(self):
            return self.getTypedRuleContext(DroltaParser.Where_clauseContext, 0)

        def group_by_statement(self):
            return self.getTypedRuleContext(DroltaParser.Group_by_statementContext, 0)

        def order_by_statement(self):
            return self.getTypedRuleContext(DroltaParser.Order_by_statementContext, 0)

        def limit_statement(self):
            return self.getTypedRuleContext(DroltaParser.Limit_statementContext, 0)

        def getRuleIndex(self):
            return DroltaParser.RULE_query

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterQuery"):
                listener.enterQuery(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitQuery"):
                listener.exitQuery(self)

    def query(self):

        localctx = DroltaParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_query)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.find_clause()
            self.state = 92
            self.where_clause()
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 19:
                self.state = 93
                self.group_by_statement()

            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 18:
                self.state = 96
                self.order_by_statement()

            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 15:
                self.state = 99
                self.limit_statement()

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Find_clauseContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FIND(self):
            return self.getToken(DroltaParser.FIND, 0)

        def result_var(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(DroltaParser.Result_varContext)
            else:
                return self.getTypedRuleContext(DroltaParser.Result_varContext, i)

        def COMMA(self, i: int = None):
            if i is None:
                return self.getTokens(DroltaParser.COMMA)
            else:
                return self.getToken(DroltaParser.COMMA, i)

        def getRuleIndex(self):
            return DroltaParser.RULE_find_clause

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterFind_clause"):
                listener.enterFind_clause(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitFind_clause"):
                listener.exitFind_clause(self)

    def find_clause(self):

        localctx = DroltaParser.Find_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_find_clause)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(DroltaParser.FIND)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 1 or _la == 39:
                self.state = 103
                self.result_var()
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la == 9:
                    self.state = 104
                    self.match(DroltaParser.COMMA)
                    self.state = 105
                    self.result_var()
                    self.state = 110
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Result_varContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.aggregateName = None  # Token
            self.alias = None  # Token

        def OPEN_PAR(self):
            return self.getToken(DroltaParser.OPEN_PAR, 0)

        def variable(self):
            return self.getTypedRuleContext(DroltaParser.VariableContext, 0)

        def CLOSE_PAR(self):
            return self.getToken(DroltaParser.CLOSE_PAR, 0)

        def IDENTIFIER(self, i: int = None):
            if i is None:
                return self.getTokens(DroltaParser.IDENTIFIER)
            else:
                return self.getToken(DroltaParser.IDENTIFIER, i)

        def AS(self):
            return self.getToken(DroltaParser.AS, 0)

        def getRuleIndex(self):
            return DroltaParser.RULE_result_var

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterResult_var"):
                listener.enterResult_var(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitResult_var"):
                listener.exitResult_var(self)

    def result_var(self):

        localctx = DroltaParser.Result_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_result_var)
        self._la = 0  # Token type
        try:
            self.state = 126
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [39]:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                localctx.aggregateName = self.match(DroltaParser.IDENTIFIER)
                self.state = 114
                self.match(DroltaParser.OPEN_PAR)
                self.state = 115
                self.variable()
                self.state = 116
                self.match(DroltaParser.CLOSE_PAR)
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == 23:
                    self.state = 117
                    self.match(DroltaParser.AS)
                    self.state = 118
                    localctx.alias = self.match(DroltaParser.IDENTIFIER)

                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.variable()
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == 23:
                    self.state = 122
                    self.match(DroltaParser.AS)
                    self.state = 123
                    localctx.alias = self.match(DroltaParser.IDENTIFIER)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Where_clauseContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHERE(self):
            return self.getToken(DroltaParser.WHERE, 0)

        def where_statement(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(DroltaParser.Where_statementContext)
            else:
                return self.getTypedRuleContext(DroltaParser.Where_statementContext, i)

        def getRuleIndex(self):
            return DroltaParser.RULE_where_clause

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterWhere_clause"):
                listener.enterWhere_clause(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitWhere_clause"):
                listener.exitWhere_clause(self)

    def where_clause(self):

        localctx = DroltaParser.Where_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_where_clause)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(DroltaParser.WHERE)
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3F) == 0 and ((1 << _la) & 549755830288) != 0:
                self.state = 129
                self.where_statement()
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while ((_la) & ~0x3F) == 0 and ((1 << _la) & 549755830288) != 0:
                    self.state = 130
                    self.where_statement()
                    self.state = 135
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Order_by_statementContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ORDER(self):
            return self.getToken(DroltaParser.ORDER, 0)

        def BY(self):
            return self.getToken(DroltaParser.BY, 0)

        def ordering_term(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(DroltaParser.Ordering_termContext)
            else:
                return self.getTypedRuleContext(DroltaParser.Ordering_termContext, i)

        def COMMA(self, i: int = None):
            if i is None:
                return self.getTokens(DroltaParser.COMMA)
            else:
                return self.getToken(DroltaParser.COMMA, i)

        def getRuleIndex(self):
            return DroltaParser.RULE_order_by_statement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterOrder_by_statement"):
                listener.enterOrder_by_statement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitOrder_by_statement"):
                listener.exitOrder_by_statement(self)

    def order_by_statement(self):

        localctx = DroltaParser.Order_by_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_order_by_statement)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(DroltaParser.ORDER)
            self.state = 139
            self.match(DroltaParser.BY)
            self.state = 140
            self.ordering_term()
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 9:
                self.state = 141
                self.match(DroltaParser.COMMA)
                self.state = 142
                self.ordering_term()
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Ordering_termContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(DroltaParser.VariableContext, 0)

        def NULLS(self):
            return self.getToken(DroltaParser.NULLS, 0)

        def ASC(self):
            return self.getToken(DroltaParser.ASC, 0)

        def DESC(self):
            return self.getToken(DroltaParser.DESC, 0)

        def FIRST(self):
            return self.getToken(DroltaParser.FIRST, 0)

        def LAST(self):
            return self.getToken(DroltaParser.LAST, 0)

        def getRuleIndex(self):
            return DroltaParser.RULE_ordering_term

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterOrdering_term"):
                listener.enterOrdering_term(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitOrdering_term"):
                listener.exitOrdering_term(self)

    def ordering_term(self):

        localctx = DroltaParser.Ordering_termContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_ordering_term)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.variable()
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 30 or _la == 31:
                self.state = 149
                _la = self._input.LA(1)
                if not (_la == 30 or _la == 31):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()

            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 35:
                self.state = 152
                self.match(DroltaParser.NULLS)
                self.state = 153
                _la = self._input.LA(1)
                if not (_la == 33 or _la == 34):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Group_by_statementContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GROUP(self):
            return self.getToken(DroltaParser.GROUP, 0)

        def BY(self):
            return self.getToken(DroltaParser.BY, 0)

        def variable(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(DroltaParser.VariableContext)
            else:
                return self.getTypedRuleContext(DroltaParser.VariableContext, i)

        def COMMA(self, i: int = None):
            if i is None:
                return self.getTokens(DroltaParser.COMMA)
            else:
                return self.getToken(DroltaParser.COMMA, i)

        def getRuleIndex(self):
            return DroltaParser.RULE_group_by_statement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterGroup_by_statement"):
                listener.enterGroup_by_statement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitGroup_by_statement"):
                listener.exitGroup_by_statement(self)

    def group_by_statement(self):

        localctx = DroltaParser.Group_by_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_group_by_statement)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(DroltaParser.GROUP)
            self.state = 157
            self.match(DroltaParser.BY)
            self.state = 158
            self.variable()
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 9:
                self.state = 159
                self.match(DroltaParser.COMMA)
                self.state = 160
                self.variable()
                self.state = 165
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Limit_statementContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.limitVal = None  # Token
            self.offsetVal = None  # Token

        def LIMIT(self):
            return self.getToken(DroltaParser.LIMIT, 0)
